# eval-studio

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  cliff.toml  dev.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: .env.example  .gitignore  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0251a906d547_add_tags_and_editing_columns.py  0a10089aab64_make_session_evaluation_id_optional_and_.py  0bfdf1fca309_add_contestant_model_to_results.py  0dc1104ac7c8_rename_request_format_to_request_body_.py  1307fd3f3b27_add_single_model_to_providers.py  22761e2e6298_add_retrieved_chunks_to_results.py  22f55693907d_add_rubrics_table.py  2a778187e3d6_add_ssl_fields_to_providers.py  2c32845ca520_datetime_timezone_aware.py  2e179a407c45_add_error_field_to_evaluations.py  346b00c58bbe_drop_environments_table_and_environment_.py  3fc49606c57f_add_rate_limit_fields_to_providers.py  416da1255d27_rename_litellm_model_to_default_model.py  417963dff6f8_add_artifacts_table.py  5a3cecd363d1_enhance_session_model_for_agent_chat.py  66b746a633ce_drop_providers_table.py  92f2dd645ebe_initial_schema.py  9d2fc61ed930_add_fk_constraints_on_evaluation_columns.py  a1b2c3d4e5f6_add_custom_provider_fields.py  a3b4c5d6e7f8_drop_purpose_from_providers.py  ac7b4c2df9b6_add_metadata_column_to_evaluations.py  b4de93af30b7_redact_secrets_in_evaluation_config.py  ba5ca10b45b6_merge_ssl_and_artifacts_heads.py  cea91902da6d_drop_judge_configs_table_and_judge_.py  d18fbfc6a959_merge_custom_provider_and_rename_heads.py  eccd117143f3_add_rubric_id_to_evaluations.py  f1197de8eb37_add_providers_table.py  f1a3fd8cc116_initial_schema.py  f25d781af937_migrate_scored_sessions_data.py  f76f799797d6_add_api_keys_table.py
backend/app/: main.py
backend/app/adapters/: base.py  factory.py  litellm_judge.py  registry.py
backend/app/agent_backends/: base.py  custom_httpx_agent.py  factory.py  litellm_agent.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  providers.py  rate_limiter.py  registry_base.py  security.py  subprocess_validation.py  tool_servers.py
backend/app/environments/: base.py  byoe.py
backend/app/harnesses/: __init__.py  base.py  builtin.py  factory.py  registry.py  subprocess_harness.py
backend/app/mcp/: __init__.py  client.py  manager.py
backend/app/models/: __init__.py  api_key.py  artifact.py  dataset.py  environment.py  evaluation.py  provider.py  result.py  rubric.py  session.py
backend/app/rag_backends/: __init__.py  base.py  factory.py  http_adapter.py  pgvector_adapter.py
backend/app/schemas/: api_key.py  artifact.py  common.py  dataset.py  dataset_import.py  environment.py  evaluation.py  harness.py  health.py  judge.py  (+7 more)
backend/scripts/: gen_ws_schema.py
backend/tests/: conftest.py
clients/: pyproject.toml
clients/tests/: conftest.py  test_async_client.py  test_cli.py  test_cli_output.py  test_client.py  test_config.py  test_exceptions.py  test_models.py
(+487 files in other folders)
