[project]
name = "eval-studio-backend"
version = "0.1.1"
description = "FastAPI backend for eval-studio — the workspace for building, running, and improving AI evaluations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "aiosqlite>=0.20,<0.21",
    "alembic>=1.14,<1.15",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "litellm>=1.40,<1.50",
    "structlog>=24.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27,<0.28",
    "pyyaml>=6.0,<7.0",
    "rubric-kit>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]
pgvector = [
    "asyncpg>=0.31.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]  # Allow Depends() in function defaults (FastAPI convention)

[tool.ruff.lint.per-file-ignores]
"app/core/exceptions.py" = ["N818"]  # Exception classes follow domain naming, not Error suffix

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
