[project]
name = "eval-studio-client"
version = "0.1.0"
description = "Python SDK and CLI for eval-studio"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<0.28",
    "pydantic>=2.0,<3.0",
]

[project.scripts]
eval-studio = "eval_studio.cli:app"

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "respx>=0.22",
    "eval-studio-client[cli]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_studio"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/eval_studio/cli/*.py" = ["B008"]  # typer.Option() in defaults is standard typer practice

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
